# git-auto-flow

./: #.gitleaksignore#  #TECHNICAL_DEBT.md#  .env~  .gitignore  .gitleaksignore  .releaserc.json  CHANGELOG.md  FINAL-TEST.md  INSTALL-IMPROVEMENTS.md  README.md  RENAME.md  TECHNICAL_DEBT.md  TESTING.md  WORKFLOW-TEST.md  activate.sh  build.sh  build_fast.sh  build_full.sh  fix_build.sh  incohérences_identifiées.md  install-alias.sh  install.sh  launcher.py  package-lock.json  package.json  plan_correction.md  project_config.py  pyproject.toml  requirements.txt  reunion.txt~  test-commit-auto.md  test-meeting.md  test-workflow.md
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/scripts/: check-environment.sh
.github/workflows/: release-binaries.yml  release.yml  test-build.yml
ancien-dossier/: README.md  TECHNICAL_DEBT.md  meeting-notes.md  pnpm-lock.yaml  reunion.txt
ancien-dossier/config/: git-aliases
ancien-dossier/src/: git-create-tickets.py  git-pr-auto.py  git-release-auto.py
new-project/: BUILD.md  NOTES.txt  README.md  main.py  pyproject.toml
new-project/src/gitautoflow/: __meta__.py
new-project/src/gitautoflow/cli/: __init__.py  commits.py  issues.py  main.py  releases.py  repos.py
new-project/src/gitautoflow/core/: github.py
scripts/: build-binary.sh  rename-binary.py
src/: #git-repo-create.py#  git-autoflow-init.py  git-commit-auto.py  git-create-tickets.py  git-cz-auto-v2.py  git-cz-auto.py  git-pr-auto.py  git-pr-create-auto.py  git-project-config.py  git-release-auto.py  git-repo-create.py
src/lib/: ai_provider.py  (+5 more)
(+16 files in other folders)
