[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "nuitka>=2.7.14",
    "pyinstaller==6.16.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "typer[all]>=0.17.4",
]
